<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- DETAILS STRINGS -->
    <string name="photo_real_estate">photo real estate</string>
    <string name="action_search">action search</string>
    <string name="action_add">action add</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="agent">Agent</string>
    <string name="house">House</string>
    <string name="flat">Flat</string>
    <string name="other">Other:</string>
    <string name="m2">m2</string>
    <string name="price">Price</string>
    <string name="dollar">$</string>
    <string name="rooms">Rooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="description">Description</string>
    <string name="geo_location">Geo location</string>
    <string name="add">Add</string>
    <string name="bedrooms">Bedrooms</string>

    <!--ERROR MESSAGES-->
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat and long used</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>
    <string name="toast_title_no_image_chosen">No image chosen</string>
    <string name="warning_add_object_without_address">You need to enter a valid address for your object</string>
    <string name="warning_address_not_valid">Enter a valid address</string>
    <string name="warning_add_item_without_agent">You need to choose an agent for the object you want to create</string>

    <!--PERMISSIONS-->
    <string name="popup_title_permission_files_access">Access photo gallery</string>
    <string name="popup_title_permission_camera_access">Access camera</string>

    <!-- SPINNER ROOMS CREATE REAL ESTATE ACTIVITY-->
    <string-array name="rooms_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <!-- SPINNER BATHROOMS CREATE REAL ESTATE ACTIVITY-->
    <string-array name="bathrooms_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>


    <!--MAP-->
    <string name="map_url_start">https://maps.googleapis.com/maps/api/staticmap?center=</string>
    <string name="map_url_city_and_marker">&amp;zoom=13&amp;size=600x300&amp;maptype=roadmap
        &amp;markers=color:red%7Clabel:</string>

    <!--NAVIGATION DRAWER-->
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>

    <!--SEARCH ACTIVITY-->
    <string name="delete_photo">Delete</string>
    <string name="deleted">Photo deleted</string>
    <string name="close">Close</string>
    <string name="sold">SOLD</string>
    <string name="min">min</string>
    <string name="max">max</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="search">Search</string>
    <string name="address">Address</string>
    <string name="photos">Photos</string>

    <!--POINTS OF INTERESTS-->
    <string name="doctor">Doctor</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="subway_station">Subway station</string>
    <string name="amusement_parc">Amusement parc</string>
    <string name="restaurant">Restaurant</string>
    <string name="bus_station">Bus station</string>
    <string name="city_hall">City hall</string>
    <string name="hospital">Hospital</string>
    <string name="super_market">Super market</string>
    <string name="airport">Airport</string>
    <string name="school">School</string>
    <string name="train_station">Train station</string>
    <string name="city">City</string>
    <string name="map_view">Map view</string>
    <string name="choose_item_to_edit">Choose an item to edit first</string>
    <string name="photo_not_taken">No photo was taken</string>
    <string name="reset">Reset</string>
    <string name="click_to_pick_a_date">Click to pick a date</string>
    <string name="convert_to_euro">Convert to Euro</string>
    <string name="convert_to_dollar">Convert to Dollar</string>

    <string name="update">Update</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="surface">Surface</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_results">Search results</string>
    <string name="description_popup_title">Description</string>
    <string name="cancel">Cancel</string>
    <string name="photo_added">Photo added</string>
    <string name="type_tag_house">tag_house</string>
    <string name="type_tag_appartement">tag_apartement</string>
    <string name="no_video_saved">No video saved</string>
    <string name="bathroom">Bathroom</string>
    <string name="authorize_gps">You need to authorize GPS function</string>
    <string name="no_internet">No internet available</string>
    <string name="grant_access_location">You need to grant permission to access your location</string>
    <string name="add_photo">Add photo</string>
    <string name="channel_name">realestate</string>
    <string name="channel_description">realestate_add</string>
    <string name="real_estate_added">New real estate added !</string>
    <string name="type">Type</string>
    <string name="use_gps">Use GPS</string>
    <string name="location">Location</string>
    <string name="required">*Required</string>
    <string name="media">Media</string>
    <string name="photo">Photo</string>
    <string name="pick">Pick</string>
    <string name="video">Video</string>
    <string name="agent_req">Agent*</string>
    <string name="price_in_dollar">Price $</string>
    <string name="address_req">Address*</string>
    <string name="city_req">City*</string>


</resources>
