<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_drawer"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_map"
            android:icon="@drawable/ic_map"
            android:orderInCategory="100"
            android:title="@string/map_view" />
        <item
            android:id="@+id/action_euro"
            android:icon="@drawable/ic_action_euro"
            android:orderInCategory="100"
            android:title="@string/convert_to_euro" />
        <item
            android:id="@+id/action_dollar"
            android:icon="@drawable/ic_action_dollar"
            android:orderInCategory="100"
            android:title="@string/convert_to_dollar" />

    </group>

</menu>