<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_create_act"
        android:background="@color/white"
        android:orientation="vertical">

        <!--AGENT REAL ESTATE-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agent"
                android:textSize="@dimen/text_size_create_act"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/agent_et"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="30" />
        </LinearLayout>

        <!--TYPE -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/house_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:clickable="true"
                android:drawableTop="@drawable/ic_icon_home"
                android:focusable="true"
                android:padding="2dp"
                android:text="@string/house"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_ic" />


            <TextView
                android:id="@+id/apartement_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:clickable="true"
                android:drawableTop="@drawable/ic_apartement"
                android:focusable="true"
                android:padding="2dp"
                android:text="@string/flat"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_ic" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:text="@string/other"
                    android:textSize="@dimen/text_size_create_act"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/type_tv"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="..." />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <!--SURFACE -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Surface"
                    android:textSize="@dimen/text_size_create_act"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/surface_tv"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/m2"
                    android:inputType="number"
                    android:maxLength="8"
                    android:textAlignment="textEnd" />
            </LinearLayout>


            <!--PRICE -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="@dimen/text_size_create_act"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/price_tv"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/dollar"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textAlignment="textEnd" />
            </LinearLayout>
        </LinearLayout>

        <!--ROOM DETAILS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:weightSum="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rooms" />

            <Spinner
                android:id="@+id/spinner_rooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bathrooms" />

            <Spinner
                android:id="@+id/spinner_bathrooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:outlineAmbientShadowColor="@color/blue"
                android:layout_weight="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bedrooms" />

            <Spinner
                android:id="@+id/spinner_bedrooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


        <!--CAMERA OR GALLERY -->
        <LinearLayout
            android:id="@+id/gallery_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ic_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/ic_camera"
                android:clickable="true"
                android:focusable="true"
                android:padding="20dp" />

            <TextView
                android:id="@+id/ic_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_pick_photo"
                android:clickable="true"
                android:focusable="true"
                android:padding="20dp" />

            <RelativeLayout
                android:id="@+id/photo_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/recyclerview_photos_info"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </RelativeLayout>

        </LinearLayout>

        <!--DESCRIPTION -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="0.5"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/description"
                android:textSize="@dimen/text_size_create_act"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/description_et"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="3"
                android:hint="..."
                android:paddingLeft="10dp" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>