<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--TYPE -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/house_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:clickable="true"
            android:drawableTop="@drawable/ic_icon_home"
            android:focusable="true"
            android:padding="2dp"
            android:text="@string/house"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_ic" />


        <TextView
            android:id="@+id/apartement_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:clickable="true"
            android:drawableTop="@drawable/ic_apartement"
            android:focusable="true"
            android:padding="2dp"
            android:text="@string/flat"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_ic" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:text="@string/other"
                android:textSize="@dimen/text_size_create_act"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/type_tv"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_edit_text"
                android:hint="..." />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>