<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!--ROOM DETAILS -->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/non_touch_target_dimen"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:src="@drawable/round_local_hotel_black_24" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:hint="@string/rooms"
        app:counterMaxLength="4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rooms_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>


    <!--BATHROOM-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:hint="@string/bathrooms"
        app:counterMaxLength="3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bathroom_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--BEDROOMS-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/bedrooms">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bedroom_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>